<resources>
    <string name="app_name">Bedu Shop</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo electrónico</string>
    <string name="register">Regístrate aquí</string>
    <string name="login">Iniciar Sesión</string>
    <string name="errorEmail">Ingrese una dirección de correo válida</string>
    <string name="errorPassword">Ingrese una contraseña válida</string>
    <string name="registerTitle">Regístrate</string>
    <string name="divider">-----------        o        -----------</string>
    <string name="fullname">Nombre completo</string>
    <string name="phone">Teléfono</string>
    <string name="btnRegister">Registrarse</string>
    <string name="validInput">Ingrese un valor válido para este campo</string>
    <string name="title_home">Inicio</string>
    <string name="title_cart">Carrito</string>
    <string name="title_profile">Perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home_fragment">Lista de productos</string>
    <string name="title_cart_fragment">Carrito de compras</string>
    <string name="state_detail_fragment">Nuevo</string>
    <string name="title_detail_fragment">Consolo Xbox Series 10</string>
    <string name="calification_detail_fragment">100</string>
    <string name="price_detail_fragment">999.00</string>
    <string name="simboloPesos">$</string>
    <string name="cuotas_detail_fragment">En 6 cuotas sin interes de $</string>
    <string name="priceCuotas_detail_fragment">100</string>
    <string name="disponibilidad_detail_fragment">Disponible en tu domicilio</string>
    <string name="entrega_detail_fragment">Entrega mañana</string>
    <string name="btn_detail_fragment">AGREGAR AL CARRITO</string>
    <string name="description_detail_fragment">Descripción</string>
    <string name="descExample_detail_fragment">una descripcion del producto</string>
    <string name="name_item_product">nombre del producto</string>
    <string name="price_item_product">1999.21</string>
    <string name="calification_item_product">412</string>
    <string name="item_search_toast">La busqueda esta desabilitada</string>
    <string name="item_help_link">https://www.bedu.org</string>
    <string name="textAddBtn">Se ha añadido al carrito</string>
    <string name="logout">CERRAR SESIÓN</string>
    <string name="searchUserDataError">Error al buscar usuario</string>
    <string name="snackbarAction">ENTENDIDO</string>
    <string name="userNotFound">Usuario no encontrado</string>
    <!--  Profile  -->
    <string name="optionDirections">Mis direcciones</string>
    <string name="optionMethodPayment">Método de Pago</string>
    <string name="optionDelivery">Pedidos</string>
    <string name="optionNotifications">Notificaciones</string>
    <string name="optionChangePassword">Cambiar Contraseña</string>
    <string name="iconOption">icono de la opcion</string>
    <string name="iconNext">icono para avanzar</string>
    <string name="titleOption">Titulo</string>

    <!--Address-->
    <string name="addresFragmentMainText">Agregar dirección</string>
    <string name="addresFragmentSubText">Ubicación Actual</string>
    <string name="addresFragmentButtonText">Actualizar</string>
    <string name="example_dir">Actualice para mostrar su ubicación</string>
    <string name="contentDescAddressFrag">close</string>
    <string name="ok">Encender</string>
    <string name="dialog_message">El GPS está apagado ¿Quiere encenderlo?</string>
    <string name="cancel">Cancelar</string>
    <string name="locationNotFound">Ubicación no encontrada, intente nuevamente</string>
    <string name="fatalError">Ups... Algo salió mal</string>

    <!-- Cart -->
    <string name="cartButtonText">Proceder al pago</string>
    <string name="emptyCart">El carrito está vacío</string>
    
    <!-- Payment -->
    <string name="titleDataPayment">Datos de pago</string>
    <string name="itemActLocation">Dirección actual</string>
    <string name="subtitle">Resumen</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Envío</string>
    <string name="shippingPrice">$30.00</string>
    <string name="total">Total</string>
    <string name="buttonPayText">Pagar</string>

    <!--Successful Payment -->
    <string name="thanksText">¡Gracias por tu compra!</string>
    <string name="textSuccessfulFragment">Recibirás tu paquete pronto</string>
    <string name="buttonGoMain">Ir al menú principal</string>

    <!-- Notifications -->
    <string name="channelPayment">compras</string>
    <string name="descriptionPayment">Notificaciones acerca de las compras realizadas</string>
    <string name="simpleTitle">Compra Realizada</string>
    <string name="simpleBody">Tu pedido llegará en una semana</string>
</resources>