<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragments.SuccessfulPaymentFragment">

    <ImageView
        android:id="@+id/ivPackage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/img_package"
        app:layout_constraintBottom_toTopOf="@+id/btnGoToHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.343" />

    <TextView
        android:id="@+id/textViewThanks"
        style="@style/TitlePaymentFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanksText"
        app:layout_constraintBottom_toTopOf="@+id/btnGoToHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPackage"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSuccessfulFragment"
        app:layout_constraintBottom_toTopOf="@+id/btnGoToHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewThanks"
        app:layout_constraintVertical_bias="0.148" />

    <Button
        android:id="@+id/btnGoToHome"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="80dp"
        android:text="@string/buttonGoMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>